# desktop-pet

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/plans/: asr-sherpa-onnx-plan.md  md-quizzical-star.md
doc/: 技能系统使用说明.md  技能系统设计.md
src/: App.vue  ChatApp.vue  OnboardingApp.vue  SettingsApp.vue  StatusApp.vue  main.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: asr_bridge.m
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/asr/: mod.rs
src-tauri/src/audio/: mod.rs  recording.rs
src-tauri/src/llm/: mod.rs  react.rs
src-tauri/src/llm/tools/: README.md  mod.rs  open_app.rs  pet_control.rs  registry.rs  run_command.rs  system_status.rs  system_time.rs  take_screenshot.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/skills/: manager.rs  mod.rs  models.rs  parser.rs  retrieval.rs  tool.rs
src/composables/: useAsr.ts  useKeyboardFix.ts  useMemory.ts  usePetGrowth.ts  usePetState.ts  useSkills.ts  useVoiceAssistant.ts  useWindowManager.ts
src/styles/: global.css
资源/: v1.2.md  总体方案.md  详细设计.md
