[package]
name = "desktop-pet"
version = "0.1.0"
description = "Desktop pet app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
cc = "1"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
dirs = "5"
tauri = { version = "2.0.0", features = [ "macos-private-api", "tray-icon"] }
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
async-trait = "0.1"
rand = "0.8"
sysinfo = "0.30"
tokio-util = { version = "0.7", features = ["compat"] }
tauri-plugin-global-shortcut = "2.0.0"


# 音频录制
cpal = "0.15"
hound = "3.5"
rubato = "0.12"
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
